--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -17,7 +17,7 @@ html(lang="ko")
                         li
                             a(href="/logout")  log out
                         li 
-                            a(href="/profile")  #{session.user.username}
+                            a(href="/users/edit") Edit Profile
                     else
                         li
                             a(href="/join")  Join
