--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -12,3 +12,5 @@ block content
     div
         span Don't have an account? 
         a(href="/join") Create one now &rarr; 
+        br
+        a(href="/users/github/start") Continue with Github &rarr;
