--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,7 +3,7 @@ html(lang="ko")
     head
         title #{pageTitle} | wetube
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
-        
+        link(rel="stylesheet", href="/static/css/styles.css")
     body 
         header
             h1=pageTitle
@@ -34,4 +34,3 @@ html(lang="ko")
         main 
             block content
     include partial/footer 
-    script(src="/static/js/main.js")  
