--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,36 +2,12 @@ doctype html
 html(lang="ko")
     head
         title #{pageTitle} | wetube
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         link(rel="stylesheet", href="/static/css/styles.css")
     body 
-        header
-            h1=pageTitle
-            nav 
-                ul 
-                    li
-                        a(href=`/`) Home &rarr;
-                    if session.loggedIn
-                        li 
-                            a(href=`/videos/upload`) upload &rarr;
-                        li
-                            a(href=`/users/${loggedInUser._id}`) My Profile
-                        li
-                            a(href="/users/logout")  log out
-                        li 
-                            a(href="/users/edit") Edit Profile
-                    else
-                        li
-                            a(href="/join")  Join
-                        li
-                            a(href="/login")  Login  
-                    
-                    li 
-                        a(href=`/search`) Search &rarr;
-                    li
-                        a(href="/join")  Join
 
+        include partials/header     
         main 
             block content
-    include partial/footer 
+        include partials/footer 
     script(src="/static/js/main.js")  
