--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -2,7 +2,7 @@ extends base
 
 block content
     img(src=loggedInUser.avatarUrl, width="100", height="100")
-    form(method="POST", enctype="multipart/form-data")
+    form(method="POST", enctype="multipart/form-data").edit-profile__form
         label(for="avatar") Avatar
         input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Name", name="name", type="text", required, value=loggedInUser.name)
@@ -13,4 +13,5 @@ block content
     
     if !loggedInUser.socialOnly
             hr
-            a(href="change-password") Change Password &rarr; 
+            div.edit-profile__password
+               a(href="change-password") Change Password &rarr;
