--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,10 +1,8 @@
 extends base
 include mixins/video
 block content 
-    h1 welcoem here you will see trending videos
-    
-
-    each potato in videos
-        +video(potato)
-    else 
-        li nothing
+    div.video-grid
+        each video in videos
+            +video(video)
+        else
+            span.empty__message No videos found
