--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -10,11 +10,15 @@ header
                 li 
                     a(href=`/videos/upload`) upload &rarr;
                 li
-                    a(href=`/users/${loggedInUser._id}`) My Profile
-                li
                     a(href="/users/logout")  log out
                 li 
                     a(href="/users/edit") Edit Profile
+                li
+                    a(href=`/users/${loggedInUser._id}`)
+                        if loggedInUser.avatarUrl === ""
+                            span 😀
+                        else
+                            img.header__avatar(src=loggedInUser.avatarUrl)
             else
                 li
                     a(href="/login")  Login  
