--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,6 +2,12 @@ extends base.pug
 
 block content 
     video(src=video.fileUrl, controls)
+    div
+        button#play Play
+        button#mute Mute
+        span#time 00:00/00:00
+        input(type="range",step="0.1", min="0", max="1")#volume
+//-    
     div 
         p=video.description
         small=video.createdAt
@@ -13,5 +19,7 @@ block content
         br
         a(href=`${video.id}/delete`) Delete Video &rarr;
     
+block scripts 
+    script(src="/static/js/videoplayer.js")  
 
     
