--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -28,7 +28,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: $bg;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 main {
