--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,9 @@
 extends base
 
 block content 
+    div
+        video#preview
+        button#startBtn Start Recording
     if errmsg
         span=errmsg
     form(method="POST", enctype="multipart/form-data")
@@ -10,3 +13,6 @@ block content
         input(type="text", name="description", placeholder="description", required,  minlength ="20")
         input(type="text", name="hashtags", placeholder="hashtags seperate by comma", required)
         input(type="submit", value="Upload Video")
+
+block scripts
+    script(src="/static/js/recorder.js") 
