--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -8,6 +8,8 @@ header
                     i.fas.fa-search        
             if session.loggedIn
                 li 
+                    a(href=`/`) home &rarr;
+                li 
                     a(href=`/videos/upload`) upload &rarr;
                 li
                     a(href="/users/logout")  log out
